# truenas_client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: Setup.iss  secure_key
docker/: docker-compose.yaml  prometheus.yml
prometheus_lib/: Cargo.toml
prometheus_lib/src/: api_commands.rs  lib.rs  server.rs
prometheus_lib/src/api/v1/query/cpu/usage/: mod.rs
prometheus_lib/src/api/v1/query/memory/: mod.rs
src/: api.rs  api_lib.rs  app.rs  app_pages.rs  build.rs  encrypt.rs  lib.rs  main.rs  server_info.rs  test.rs
src/serde/: app.rs
truenas_lib/: Cargo.toml
truenas_lib/src/: api_commands.rs  lib.rs  server.rs
truenas_lib/src/api/: mod.rs
truenas_lib/src/api/v2_0/: mod.rs
truenas_lib/src/api/v2_0/app/: mod.rs
truenas_lib/src/api/v2_0/app/start/: mod.rs
truenas_lib/src/api/v2_0/app/stop/: mod.rs
truenas_lib/src/api/v2_0/app/upgrade/: mod.rs
truenas_lib/src/api/v2_0/app/upgrade_summary/: mod.rs
truenas_lib/src/api/v2_0/bootenv/: mod.rs
truenas_lib/src/api/v2_0/cronjob/: mod.rs
truenas_lib/src/api/v2_0/disk/: mod.rs
truenas_lib/src/api/v2_0/interface/: mod.rs
truenas_lib/src/api/v2_0/pool/: mod.rs
truenas_lib/src/api/v2_0/pool/snapshottask/: mod.rs
truenas_lib/src/api/v2_0/service/: mod.rs
truenas_lib/src/api/v2_0/system/: mod.rs
truenas_lib/src/api/v2_0/system/version_short/: mod.rs
truenas_lib/src/api/v2_0/vm/: mod.rs
truenas_lib/src/types/: mod.rs
truenas_lib/src/types/datasize/: mod.rs
