[package]
name = "prometheus_lib"
version = "0.1.0"
edition = "2021"
authors = ["Confused Engineer"]

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"